--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,16 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+img {
+  display: block;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+main {
+  padding-left: 20px;
+  padding-top: 20px;
 }
